// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`wing compile -t tf-aws > main.tf.json 1`] = `
{
  "//": {
    "metadata": {
      "backend": "local",
      "stackName": "root",
      "version": "0.15.2",
    },
    "outputs": {},
  },
  "data": {
    "aws_region": {
      "root_Region_A2D17352": {
        "//": {
          "metadata": {
            "path": "root/Default/Region",
            "uniqueId": "root_Region_A2D17352",
          },
        },
      },
    },
  },
  "provider": {
    "aws": [
      {},
    ],
  },
  "resource": {
    "aws_api_gateway_deployment": {
      "root_cloudApi_api_deployment_E29F699A": {
        "//": {
          "metadata": {
            "path": "root/Default/cloud.Api/api/deployment",
            "uniqueId": "root_cloudApi_api_deployment_E29F699A",
          },
        },
        "lifecycle": {
          "create_before_destroy": true,
        },
        "rest_api_id": "\${aws_api_gateway_rest_api.root_cloudApi_api_8C9FE51E.id}",
        "triggers": {
          "redeployment": "6f2ba550d571b334a9ea4ed349930b833a1d89b5",
        },
      },
    },
    "aws_api_gateway_rest_api": {
      "root_cloudApi_api_8C9FE51E": {
        "//": {
          "metadata": {
            "path": "root/Default/cloud.Api/api/api",
            "uniqueId": "root_cloudApi_api_8C9FE51E",
          },
        },
        "body": "{\\"openapi\\":\\"3.0.3\\",\\"paths\\":{\\"/users/:name\\":{\\"get\\":{\\"operationId\\":\\"get-users/:name\\",\\"responses\\":{\\"200\\":{\\"description\\":\\"200 response\\",\\"content\\":{}}},\\"parameters\\":[],\\"x-amazon-apigateway-integration\\":{\\"uri\\":\\"arn:aws:apigateway:\${data.aws_region.root_Region_A2D17352.name}:lambda:path/2015-03-31/functions/\${aws_lambda_function.root_cloudApi_cloudApiOnRequeste46e5cb7_489FDB7E.arn}/invocations\\",\\"type\\":\\"aws_proxy\\",\\"httpMethod\\":\\"POST\\",\\"responses\\":{\\"default\\":{\\"statusCode\\":\\"200\\"}},\\"passthroughBehavior\\":\\"when_no_match\\",\\"contentHandling\\":\\"CONVERT_TO_TEXT\\"}}},\\"/\\":{\\"get\\":{\\"operationId\\":\\"get\\",\\"responses\\":{\\"200\\":{\\"description\\":\\"200 response\\",\\"content\\":{}}},\\"parameters\\":[],\\"x-amazon-apigateway-integration\\":{\\"uri\\":\\"arn:aws:apigateway:\${data.aws_region.root_Region_A2D17352.name}:lambda:path/2015-03-31/functions/\${aws_lambda_function.root_cloudApi_cloudApiOnRequestb3f3d188_7B78D0CA.arn}/invocations\\",\\"type\\":\\"aws_proxy\\",\\"httpMethod\\":\\"POST\\",\\"responses\\":{\\"default\\":{\\"statusCode\\":\\"200\\"}},\\"passthroughBehavior\\":\\"when_no_match\\",\\"contentHandling\\":\\"CONVERT_TO_TEXT\\"}}}}}",
        "name": "api-c895068c",
      },
    },
    "aws_api_gateway_stage": {
      "root_cloudApi_api_stage_57D6284A": {
        "//": {
          "metadata": {
            "path": "root/Default/cloud.Api/api/stage",
            "uniqueId": "root_cloudApi_api_stage_57D6284A",
          },
        },
        "deployment_id": "\${aws_api_gateway_deployment.root_cloudApi_api_deployment_E29F699A.id}",
        "rest_api_id": "\${aws_api_gateway_rest_api.root_cloudApi_api_8C9FE51E.id}",
        "stage_name": "prod",
      },
    },
    "aws_iam_role": {
      "root_cloudApi_cloudApiOnRequestb3f3d188_IamRole_94B392C2": {
        "//": {
          "metadata": {
            "path": "root/Default/cloud.Api/cloud.Api-OnRequest-b3f3d188/IamRole",
            "uniqueId": "root_cloudApi_cloudApiOnRequestb3f3d188_IamRole_94B392C2",
          },
        },
        "assume_role_policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Action\\":\\"sts:AssumeRole\\",\\"Principal\\":{\\"Service\\":\\"lambda.amazonaws.com\\"},\\"Effect\\":\\"Allow\\"}]}",
      },
      "root_cloudApi_cloudApiOnRequeste46e5cb7_IamRole_15046B29": {
        "//": {
          "metadata": {
            "path": "root/Default/cloud.Api/cloud.Api-OnRequest-e46e5cb7/IamRole",
            "uniqueId": "root_cloudApi_cloudApiOnRequeste46e5cb7_IamRole_15046B29",
          },
        },
        "assume_role_policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Action\\":\\"sts:AssumeRole\\",\\"Principal\\":{\\"Service\\":\\"lambda.amazonaws.com\\"},\\"Effect\\":\\"Allow\\"}]}",
      },
    },
    "aws_iam_role_policy": {
      "root_cloudApi_cloudApiOnRequestb3f3d188_IamRolePolicy_5AC6F400": {
        "//": {
          "metadata": {
            "path": "root/Default/cloud.Api/cloud.Api-OnRequest-b3f3d188/IamRolePolicy",
            "uniqueId": "root_cloudApi_cloudApiOnRequestb3f3d188_IamRolePolicy_5AC6F400",
          },
        },
        "policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Effect\\":\\"Allow\\",\\"Action\\":\\"none:null\\",\\"Resource\\":\\"*\\"}]}",
        "role": "\${aws_iam_role.root_cloudApi_cloudApiOnRequestb3f3d188_IamRole_94B392C2.name}",
      },
      "root_cloudApi_cloudApiOnRequeste46e5cb7_IamRolePolicy_0281983F": {
        "//": {
          "metadata": {
            "path": "root/Default/cloud.Api/cloud.Api-OnRequest-e46e5cb7/IamRolePolicy",
            "uniqueId": "root_cloudApi_cloudApiOnRequeste46e5cb7_IamRolePolicy_0281983F",
          },
        },
        "policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Effect\\":\\"Allow\\",\\"Action\\":\\"none:null\\",\\"Resource\\":\\"*\\"}]}",
        "role": "\${aws_iam_role.root_cloudApi_cloudApiOnRequeste46e5cb7_IamRole_15046B29.name}",
      },
    },
    "aws_iam_role_policy_attachment": {
      "root_cloudApi_cloudApiOnRequestb3f3d188_IamRolePolicyAttachment_7B41A4E5": {
        "//": {
          "metadata": {
            "path": "root/Default/cloud.Api/cloud.Api-OnRequest-b3f3d188/IamRolePolicyAttachment",
            "uniqueId": "root_cloudApi_cloudApiOnRequestb3f3d188_IamRolePolicyAttachment_7B41A4E5",
          },
        },
        "policy_arn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
        "role": "\${aws_iam_role.root_cloudApi_cloudApiOnRequestb3f3d188_IamRole_94B392C2.name}",
      },
      "root_cloudApi_cloudApiOnRequeste46e5cb7_IamRolePolicyAttachment_3D2A6333": {
        "//": {
          "metadata": {
            "path": "root/Default/cloud.Api/cloud.Api-OnRequest-e46e5cb7/IamRolePolicyAttachment",
            "uniqueId": "root_cloudApi_cloudApiOnRequeste46e5cb7_IamRolePolicyAttachment_3D2A6333",
          },
        },
        "policy_arn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
        "role": "\${aws_iam_role.root_cloudApi_cloudApiOnRequeste46e5cb7_IamRole_15046B29.name}",
      },
    },
    "aws_lambda_function": {
      "root_cloudApi_cloudApiOnRequestb3f3d188_7B78D0CA": {
        "//": {
          "metadata": {
            "path": "root/Default/cloud.Api/cloud.Api-OnRequest-b3f3d188/Default",
            "uniqueId": "root_cloudApi_cloudApiOnRequestb3f3d188_7B78D0CA",
          },
        },
        "environment": {
          "variables": {
            "WING_FUNCTION_NAME": "cloud-Api-OnRequest-b3f3d188-c8c66531",
          },
        },
        "function_name": "cloud-Api-OnRequest-b3f3d188-c8c66531",
        "handler": "index.handler",
        "publish": true,
        "role": "\${aws_iam_role.root_cloudApi_cloudApiOnRequestb3f3d188_IamRole_94B392C2.arn}",
        "runtime": "nodejs16.x",
        "s3_bucket": "\${aws_s3_bucket.root_cloudApi_cloudApiOnRequestb3f3d188_Code_364E55B6.bucket}",
        "s3_key": "\${aws_s3_object.root_cloudApi_cloudApiOnRequestb3f3d188_S3Object_AD66E23A.key}",
        "timeout": 30,
      },
      "root_cloudApi_cloudApiOnRequeste46e5cb7_489FDB7E": {
        "//": {
          "metadata": {
            "path": "root/Default/cloud.Api/cloud.Api-OnRequest-e46e5cb7/Default",
            "uniqueId": "root_cloudApi_cloudApiOnRequeste46e5cb7_489FDB7E",
          },
        },
        "environment": {
          "variables": {
            "WING_FUNCTION_NAME": "cloud-Api-OnRequest-e46e5cb7-c8fd44c0",
          },
        },
        "function_name": "cloud-Api-OnRequest-e46e5cb7-c8fd44c0",
        "handler": "index.handler",
        "publish": true,
        "role": "\${aws_iam_role.root_cloudApi_cloudApiOnRequeste46e5cb7_IamRole_15046B29.arn}",
        "runtime": "nodejs16.x",
        "s3_bucket": "\${aws_s3_bucket.root_cloudApi_cloudApiOnRequeste46e5cb7_Code_42BF847C.bucket}",
        "s3_key": "\${aws_s3_object.root_cloudApi_cloudApiOnRequeste46e5cb7_S3Object_69EE2256.key}",
        "timeout": 30,
      },
    },
    "aws_lambda_permission": {
      "root_cloudApi_api_permissionGET35cb425d_5E1FC515": {
        "//": {
          "metadata": {
            "path": "root/Default/cloud.Api/api/permission-GET-35cb425d",
            "uniqueId": "root_cloudApi_api_permissionGET35cb425d_5E1FC515",
          },
        },
        "action": "lambda:InvokeFunction",
        "function_name": "\${aws_lambda_function.root_cloudApi_cloudApiOnRequeste46e5cb7_489FDB7E.function_name}",
        "principal": "apigateway.amazonaws.com",
        "source_arn": "\${aws_api_gateway_rest_api.root_cloudApi_api_8C9FE51E.execution_arn}/*/GET/users/:name",
        "statement_id": "AllowExecutionFromAPIGateway-GET-35cb425d",
      },
      "root_cloudApi_api_permissionGETc2e3ffa8_65E26D7A": {
        "//": {
          "metadata": {
            "path": "root/Default/cloud.Api/api/permission-GET-c2e3ffa8",
            "uniqueId": "root_cloudApi_api_permissionGETc2e3ffa8_65E26D7A",
          },
        },
        "action": "lambda:InvokeFunction",
        "function_name": "\${aws_lambda_function.root_cloudApi_cloudApiOnRequestb3f3d188_7B78D0CA.function_name}",
        "principal": "apigateway.amazonaws.com",
        "source_arn": "\${aws_api_gateway_rest_api.root_cloudApi_api_8C9FE51E.execution_arn}/*/GET/",
        "statement_id": "AllowExecutionFromAPIGateway-GET-c2e3ffa8",
      },
    },
    "aws_s3_bucket": {
      "root_cloudApi_cloudApiOnRequestb3f3d188_Code_364E55B6": {
        "//": {
          "metadata": {
            "path": "root/Default/cloud.Api/cloud.Api-OnRequest-b3f3d188/Code",
            "uniqueId": "root_cloudApi_cloudApiOnRequestb3f3d188_Code_364E55B6",
          },
        },
        "bucket_prefix": "code-c87e77a3-",
      },
      "root_cloudApi_cloudApiOnRequeste46e5cb7_Code_42BF847C": {
        "//": {
          "metadata": {
            "path": "root/Default/cloud.Api/cloud.Api-OnRequest-e46e5cb7/Code",
            "uniqueId": "root_cloudApi_cloudApiOnRequeste46e5cb7_Code_42BF847C",
          },
        },
        "bucket_prefix": "code-c8f42a3b-",
      },
    },
    "aws_s3_object": {
      "root_cloudApi_cloudApiOnRequestb3f3d188_S3Object_AD66E23A": {
        "//": {
          "metadata": {
            "path": "root/Default/cloud.Api/cloud.Api-OnRequest-b3f3d188/S3Object",
            "uniqueId": "root_cloudApi_cloudApiOnRequestb3f3d188_S3Object_AD66E23A",
          },
        },
        "bucket": "\${aws_s3_bucket.root_cloudApi_cloudApiOnRequestb3f3d188_Code_364E55B6.bucket}",
        "key": "<ASSET_KEY>",
        "source": "<ASSET_SOURCE>",
      },
      "root_cloudApi_cloudApiOnRequeste46e5cb7_S3Object_69EE2256": {
        "//": {
          "metadata": {
            "path": "root/Default/cloud.Api/cloud.Api-OnRequest-e46e5cb7/S3Object",
            "uniqueId": "root_cloudApi_cloudApiOnRequeste46e5cb7_S3Object_69EE2256",
          },
        },
        "bucket": "\${aws_s3_bucket.root_cloudApi_cloudApiOnRequeste46e5cb7_Code_42BF847C.bucket}",
        "key": "<ASSET_KEY>",
        "source": "<ASSET_SOURCE>",
      },
    },
  },
}
`;

exports[`wing compile -t tf-aws > preflight.js 1`] = `
"const $stdlib = require('@winglang/sdk');
const $outdir = process.env.WING_SYNTH_DIR ?? \\".\\";

function __app(target) {
	switch (target) {
		case \\"sim\\":
			return $stdlib.sim.App;
		case \\"tfaws\\":
		case \\"tf-aws\\":
			return $stdlib.tfaws.App;
		case \\"tf-gcp\\":
			return $stdlib.tfgcp.App;
		case \\"tf-azure\\":
			return $stdlib.tfazure.App;
		case \\"awscdk\\":
			return $stdlib.awscdk.App;
		default:
			throw new Error(\`Unknown WING_TARGET value: \\"\${process.env.WING_TARGET ?? \\"\\"}\\"\`);
	}
}
const $App = __app(process.env.WING_TARGET);

const cloud = require('@winglang/sdk').cloud;
class MyApp extends $App {
constructor() {
  super({ outdir: $outdir, name: \\"api_path_vars\\", plugins: $plugins });
  
  const api = this.node.root.newAbstract(\\"@winglang/sdk.cloud.Api\\",this,\\"cloud.Api\\");
  const handler = new $stdlib.core.Inflight(this, \\"$Inflight1\\", {
    code: $stdlib.core.NodeJsCode.fromFile(require.resolve(\\"./proc.e23533bc86f50983ef116f6d9e5cc754672c6dea4f4169d8dd142f6672b3b982/index.js\\".replace(/\\\\\\\\/g, \\"/\\"))),
    bindings: {
    }
  });
  (api.get(\\"/users/:name\\",handler));
  (api.get(\\"/\\",new $stdlib.core.Inflight(this, \\"$Inflight2\\", {
    code: $stdlib.core.NodeJsCode.fromFile(require.resolve(\\"./proc.7c88ab1b9f9ec6517affba3e2350aba96235a1873a81774459c5a724ef1ece4e/index.js\\".replace(/\\\\\\\\/g, \\"/\\"))),
    bindings: {
    }
  })));
}
}
new MyApp().synth();"
`;

exports[`wing compile -t tf-aws > proc.7c88ab1b9f9ec6517affba3e2350aba96235a1873a81774459c5a724ef1ece4e/index.js 1`] = `
"async handle(req) { const {  } = this; {
  return {
  \\"body\\": \\"Hello world\\",
  \\"status\\": 200,
  \\"headers\\": Object.freeze({\\"Content-Type\\":\\"text/plain\\"}),}
  ;
} };"
`;

exports[`wing compile -t tf-aws > proc.e23533bc86f50983ef116f6d9e5cc754672c6dea4f4169d8dd142f6672b3b982/index.js 1`] = `
"async handle(req) { const {  } = this; {
  const user_name = \\"A\\";
  return {
  \\"body\\": \`Hello, \${user_name}!\`,
  \\"status\\": 200,
  \\"headers\\": Object.freeze({\\"Content-Type\\":\\"text/plain\\"}),}
  ;
} };"
`;

exports[`wing test > stdout 1`] = `"pass ─ api_path_vars.w (no tests)"`;
